<resources>
    <string name="app_name">CampusLyfe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_demo">demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="sifrenizi_giriniz">Şifrenizi Giriniz</string>
    <string name="devam_et">Devam Et</string>
    <string name="sifremi_unuttum">Şifremi Unuttum</string>
    <string name="harita">HARİTA</string>
    <string name="yemekhane">YEMEKHANE</string>
    <string name="topluluklar">TOPLULUKLAR</string>
    <string name="etkinlikler">ETKİNLİKLER</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="e_mail_adresinizi_giriniz">Okul E-Mail Adresinizi Giriniz</string>
    <string name="bir_sifre_belirleyiniz">Bir Şifre Belirleyiniz</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="harita_kucuk">Harita</string>
    <string name="yemekhane_kucuk">Yemekhane</string>
    <string name="topluluklar_kucuk">Topluluklar</string>
    <string name="etkinlikler_kucuk">Etkinlikler</string>
    <string name="haritada_goster">Haritada Göster</string>
    <string name="gelenler">Gelenler</string>
    <string name="kaydet">Kaydet</string>

    <string name="profil">Profil</string>
    <string name="profi_update">Profili Güncelle</string>

    <string name="admin_islem">ADMİN İŞLEMLERİ</string>
    <string name="topluluk_ekle">TOPLULUK EKLE</string>
    <string name="etkinlik_ekle">ETKİNLİK EKLE</string>
    <string name="etkinlik_sil">ETKİNLİK SİL</string>
    <string name="yemekhane_duzenle">YEMEKHANE\n DUZENLE</string>
    <string name="l_tfen_ge_erli_bir_e_mail_adresi_giriniz">Lütfen geçerli bir e-mail adresi giriniz.</string>
    <string name="etkinlik_yeri_se_iniz">Etkinlik yeri seçiniz</string>
    <string name="lat_lng_display">(%1$.5f, %2$.5f)</string>

    <string name="ayarlar">Ayarlar</string>
    <string name="profili_guncelle">Profili Güncelle</string>
    <string name="program_tanitim">Program Tanıtımı</string>
    <string name="sifre_degisimi">Şifre Değiştir</string>
    <string name="cikis_yap">Çıkış Yap</string>
    <string name="yemekhane_seciniz">Yemekhane Seçiniz</string>
    <string name="gun_seciniz">Gün Seçiniz</string>
    <string name="yemek_gelsin">Yemek Gelsin!</string>
    <string name="sabah">Sabah:</string>
    <string name="oglen">Öğlen:</string>
    <string name="aksam">Akşam:</string>
    <string name="bilgi">Bilgi</string>
    <string name="bolum">Bölüm</string>
    <string name="ad_soyad">Ad Soyad</string>

    <style name="mesaj_gonder">Mesaj Gönder</style>


</resources>