<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.campuslyfe.fragment.food.FoodViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/eeeee"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        tools:context=".fragment.main.MainFragment">

        <TextView
            style="@style/Typography.Bold.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/yemekhane_kucuk" />

        <View
            android:id="@+id/divider_overview"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/incehat" />

        <TextView
            android:id="@+id/dropdownYemekhaneSeciniz"
            style="@style/Typography.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="4dp"
            android:padding="8dp"
            android:text="@{viewModel.selectedYemekhane ?? @string/yemekhane_seciniz}"
            app:drawableEndCompat="@drawable/ic_dropdown"
            tools:text="@string/yemekhane_seciniz" />

        <TextView
            android:id="@+id/dropdownGunSeciniz"
            style="@style/Typography.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="4dp"
            android:padding="8dp"
            android:text="@{viewModel.selectedGun ?? @string/gun_seciniz}"
            app:drawableEndCompat="@drawable/ic_dropdown"
            tools:text="@string/gun_seciniz" />

        <TextView
            android:id="@+id/btnYemekGelsin"
            style="@style/Typography.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:padding="10dp"
            android:onClick="@{() -> viewModel.yemekleriGetir()}"
            android:enabled="@{viewModel.selectedGunIndex != null &amp;&amp; viewModel.yemekhaneIndex != null}"
            android:text="@string/yemek_gelsin"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvSabah"
            style="@style/Typography.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@{viewModel.yemekListesi.toStringSabah() ?? @string/sabah}"
            android:textAlignment="center"
            tools:text="@string/sabah" />

        <TextView
            android:id="@+id/tvOglen"
            style="@style/Typography.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{viewModel.yemekListesi.toStringOgle() ?? @string/oglen}"
            android:textAlignment="center"
            tools:text="@string/oglen" />

        <TextView
            android:id="@+id/tvAksam"
            style="@style/Typography.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{viewModel.yemekListesi.toStringAksam() ?? @string/aksam}"
            android:textAlignment="center"
            tools:text="@string/aksam" />

    </LinearLayout>
</layout>