<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/eeeee"
            android:orientation="vertical"
            tools:context=".fragment.signIn.EmailFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:text="@string/giris_yap"
                android:textColor="@color/black"
                android:textSize="46sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eTextEMail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_e_mail"
                android:gravity="center"
                android:hint="@string/e_mail_adresinizi_giriniz" />

            <Button
                android:id="@+id/ButtondevamEtGiris"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="180dp"
                android:backgroundTint="@color/lightblue"
                android:text="@string/devam_et"
                android:textColor="@color/black" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>