<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/eeeee"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="120dp"
            android:layout_marginHorizontal="24dp"
            tools:context=".ayarlar.AyarlarFragment"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/ayarlar"
                android:textColor="@color/black"
                android:textSize="46sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider_overview"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/incehat" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@color/eeeee"
                android:clickable="true"
                android:id="@+id/cardViewProfilGuncelle"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/eeeee"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/profili_guncelle"
                        android:textColor="#616161"
                        android:textSize="18sp"></TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/eeeee"
                android:layout_marginTop="3dp"
                android:clickable="true"
                android:id="@+id/cardViewCikisYap"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/eeeee"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/cikis_yap"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        ></TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSifreDegistir"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/eeeee"
                android:layout_marginTop="3dp"
                android:clickable="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/eeeee"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sifre_degisimi"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        ></TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>











        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</layout>